Fixed menu on mobile devices
_mainmenu.scss @media

--- a/_sass/modules/_mainmenu.scss
+++ b/_sass/modules/_mainmenu.scss
@@ -22,4 +22,8 @@ nav.mainmenu {
         font-weight:400;
         text-decoration: none;
     }
+    
+    @media screen and (orientation: portrait) {
+    	padding-bottom:50px;
+    }
 }
